# assist_tool

./: Cargo.toml  README.md
project/: config.json
project/reviews/: s.txt
project/tasks/example/: example.hpp
project/tasks/s/: a.txt
project_example/notes/: example.txt
project_example/reviews/: example.txt
project_example/tasks/example/: example.txt
src/: main.rs
src/assisting/: state.rs  task.rs
src/preparing/: context.rs  mod.rs  notes.rs  state.rs  task.rs
src/reviewing/: mod.rs  notes.rs  review.rs
