[package]
name = "assist_tool"
version = "0.1.0"
edition = "2021"
authors = ["Kopanov Anton"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.81"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.21"
